--- a/Client/Fennec.entitlements
+++ b/Client/Fennec.entitlements
@@ -3,14 +3,14 @@
 <plist version="1.0">
 <dict>
 	<key>application-identifier</key>
-	<string>$(AppIdentifierPrefix)org.mozilla.ios.Fennec</string>
+	<string>$(AppIdentifierPrefix)io.github.allenngn.Fennec</string>
 	<key>com.apple.security.application-groups</key>
 	<array>
-		<string>group.org.mozilla.ios.Fennec</string>
+		<string>group.io.github.allenngn.Fennec</string>
 	</array>
 	<key>keychain-access-groups</key>
 	<array>
-		<string>$(AppIdentifierPrefix)org.mozilla.ios.Fennec</string>
+		<string>$(AppIdentifierPrefix)io.github.allenngn.Fennec</string>
 	</array>
 </dict>
 </plist>
