--- a/Extensions/SendTo/Fennec.entitlements
+++ b/Extensions/SendTo/Fennec.entitlements
@@ -4,11 +4,11 @@
 <dict>
 	<key>com.apple.security.application-groups</key>
 	<array>
-		<string>group.org.mozilla.ios.Fennec</string>
+		<string>group.io.github.allenngn.Fennec</string>
 	</array>
 	<key>keychain-access-groups</key>
 	<array>
-		<string>$(AppIdentifierPrefix)org.mozilla.ios.Fennec</string>
+		<string>$(AppIdentifierPrefix)io.github.allenngn.Fennec</string>
 	</array>
 </dict>
 </plist>
